# ras_robot_vision

ras_lab1_controllers/ras_lab1_cartesian_controllers/: CMakeLists.txt  package.xml  package.xml~
ras_lab1_controllers/ras_lab1_cartesian_controllers/src/: circle_cartesian_controller.cpp  circle_cartesian_controller.cpp~  line_cartesian_controller.cpp  wall_following_controller.cpp~
ras_lab1_controllers/ras_lab1_controllers/: package.xml
ras_lab1_controllers/ras_lab1_motor_controller/: CMakeLists.txt  CMakeLists.txt~  package.xml~
ras_lab1_controllers/ras_lab1_motor_controller/src/: motor_controller.cpp  motor_controller.cpp~
ras_lab1_controllers/ras_lab1_open_loop_control/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
ras_lab1_controllers/ras_lab1_open_loop_control/src/: open_loop_controller.cpp~
ras_object_classify/: transform_data.py
ras_object_classify/color_classify/: CMakeLists.txt  package.xml
ras_object_classify/color_classify/scripts/: blue_cube.npz  blue_prism.npz  color_classify.py  green_cube.npz  green_light_cube.npz  orange_star.npz  red_cube.npz  violet_cross.npz  yellow_cube.npz
ras_object_classify/ras_object_classify/: CMakeLists.txt  package.xml
ras_object_classify/roc_lib/: CMakeLists.txt  package.xml
ras_object_classify/roc_lib/src/: roc_ml.py
ras_object_classify/roc_lib/src/roc_lib/: __init__.py  roc_features.py  roc_utils.py
ras_object_cv/: params.yaml
ras_object_cv/ras_image_manip/: CMakeLists.txt  package.xml
ras_object_cv/ras_image_manip/src/: image_manip.cpp
ras_object_cv/ras_object_cv/: CMakeLists.txt  package.xml
ras_object_cv/ras_object_cv_launch/: CMakeLists.txt  package.xml~
ras_object_cv/ras_object_cv_launch/launch/: object_cv.launch
ras_object_cv/ras_object_detect/: CMakeLists.txt  package.xml  package.xml~
ras_object_cv/ras_object_detect/src/: collect_av_info.cpp  color_detect.cpp  object_detector.cpp  object_detector_test.cpp  object_speaker.cpp  shape_detector.cpp  shape_detector_test.cpp
ras_object_cv/ras_object_detect/srv/: ImageTransfer.srv
ras_object_cv/ras_object_lib/: CMakeLists.txt  CMakeLists.txt~  package.xml
ras_object_cv/ras_object_lib/include/ras_object_lib/: image_color_range.h  image_converter.h  image_morph.h  image_normalise.h  image_normaliser.h  image_utils.h
ras_object_cv/ras_object_lib/src/: image_color_range.cpp  image_converter.cpp  image_morph.cpp  image_normalise.cpp  image_utils.cpp
ras_object_cv/ras_object_lib/srv/: Depth_Transfer.srv  Depth_Transfer.srv~
ras_object_detection/: package.xml
ras_object_detection/include/ras_object_detection/: image_converter.h
ras_object_detection/src/: image_converter.cpp  object_detector.cpp
